<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:appCompact="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/no_internet_connection"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/noconnection"
        android:gravity="center">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/no_internet"
                app:srcCompat="@drawable/wifi" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:text="@string/internet_unavailable"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:gravity="center"
                android:textColor="@color/text_secondary"
                android:textSize="@dimen/text_label"
                android:text="@string/please_check_your_internet_connectivity"/>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="50dp"
                android:background="@color/colorPrimary"
                android:text="@string/refresh"
                android:textColor="#ffffff"
                android:id="@+id/btn_refresh" />

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>